# spar-ood-propensities

./: README.md
ben/tinker/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
ben/tinker/datasets/: 20260221-021941.examples.yaml  20260221-021941.instructions.yaml  20260221-021941.params.yaml  20260221-023038.examples.yaml  20260221-023038.params.yaml
ben/tinker/eval_results/: 20260222-175505.eval-results.yaml  20260222-200112.eval-results.yaml  20260222-202656.eval-results.yaml  20260222-213757.eval-results.yaml  20260224-015016.eval-results.yaml
ben/tinker/evals/: 20260222-034530.eval-params.yaml  20260222-034530.eval.yaml  20260222-211218.eval-params.yaml  20260222-211218.eval.yaml
ben/tinker/evaluation/: __init__.py  io.py  prompts.py  schemas.py
ben/tinker/generation/: __init__.py  client.py  config.py  io.py  pipeline.py  prompts.py  schemas.py
ben/tinker/notebooks/: Untitled.py
ben/tinker/scripts/: eval.py  gen_eval.py  generate.py  plot_eval.py  rl_loop.py  sft.py
ben/tinker/tests/: test_io.py  test_pipeline.py  test_sft_config.py
ben/tinker/utils/: __init__.py  client.py  io.py  llm.py
lily/: .gitignore  sycophancy_examples.csv  training.py
lily/datasets/csv/: honesty_examples.csv
lily/propensities/: pyproject.toml
lily/scripts/: jsonl_converter.py  sampling.py
niels/propensities/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
niels/propensities/.claude/: settings.local.json
niels/propensities/experiments/: README.md  eval_config.py  evaluate_reference_answers.py  few_shot_elicitation.py  plots.py  run_all.py  sft_elicitation.py  system_prompt_elicitation.py
niels/propensities/tests/: test_freeform_integration.py  test_full_example.py  test_judge.py  test_judge_debug.py  test_judge_direct.py  test_localrouter_runner.py
niels/propensities/vibes_eval/: __init__.py  freeform.py  runner.py  verifiers_env.py
owen/: .gitignore  pyproject.toml
owen/consequentialist_reasoning_exploration/: eval.py  judge.py  sft.py
(+104 files in other folders)
